--- a/index.html
+++ b/index.html
@@ -486,6 +486,109 @@
             }
             .chart-column { width: 16%; }
         }
+        /* --------------------------------------------------
+   Responsive Fixes for Navbar, Hero, and Timeline
+-------------------------------------------------- */
+
+/* Tablets (max-width: 992px) */
+@media (max-width: 992px) {
+    .navbar {
+        padding: 16px;
+    }
+
+    .hero-section h1 {
+        font-size: 2.4rem;
+    }
+
+    .hero-section p {
+        font-size: 1rem;
+        padding: 0 20px;
+    }
+
+    .timeline::before {
+        left: 12px;
+        transform: none;
+    }
+
+    .timeline-item {
+        width: 100%;
+        padding-left: 40px;
+    }
+
+    .timeline-item:nth-child(even) {
+        transform: none;
+        left: 0;
+    }
+}
+
+/* Mobiles (max-width: 768px) */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        gap: 8px;
+        text-align: center;
+    }
+
+    .nav-links {
+        flex-direction: column;
+        gap: 6px;
+    }
+
+    .hero-section h1 {
+        font-size: 2rem;
+    }
+
+    .hero-section p {
+        font-size: 0.95rem;
+    }
+
+    .cta-button {
+        font-size: 0.9rem;
+        padding: 12px 22px;
+    }
+
+    .controls {
+        padding: 16px;
+    }
+
+    .control-group {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .control-item {
+        width: 100%;
+    }
+
+    .timeline::before {
+        left: 8px;
+    }
+
+    .timeline-item {
+        padding-left: 34px;
+        margin-bottom: 50px;
+    }
+}
+
+/* Small Phones (max-width: 480px) */
+@media (max-width: 480px) {
+    .hero-section h1 {
+        font-size: 1.7rem;
+    }
+
+    .hero-section p {
+        font-size: 0.88rem;
+    }
+
+    .timeline-item {
+        padding-left: 28px;
+    }
+
+    .timeline-item .content {
+        padding: 14px 16px;
+    }
+}
+
     </style>
 </head>
 <body>
